--- a/sort/.vscode/settings.json
+++ b/sort/.vscode/settings.json
@@ -7,15 +7,19 @@
 		"cctype": "cpp",
 		"clocale": "cpp",
 		"cmath": "cpp",
+		"compare": "cpp",
+		"concepts": "cpp",
 		"cstdarg": "cpp",
 		"cstddef": "cpp",
 		"cstdint": "cpp",
 		"cstdio": "cpp",
 		"cstdlib": "cpp",
+		"ctime": "cpp",
 		"cwchar": "cpp",
 		"cwctype": "cpp",
 		"deque": "cpp",
 		"map": "cpp",
+		"string": "cpp",
 		"unordered_map": "cpp",
 		"vector": "cpp",
 		"exception": "cpp",
@@ -25,9 +29,7 @@
 		"memory": "cpp",
 		"memory_resource": "cpp",
 		"numeric": "cpp",
-		"optional": "cpp",
 		"random": "cpp",
-		"string": "cpp",
 		"string_view": "cpp",
 		"system_error": "cpp",
 		"tuple": "cpp",
@@ -35,17 +37,17 @@
 		"utility": "cpp",
 		"fstream": "cpp",
 		"initializer_list": "cpp",
+		"iomanip": "cpp",
 		"iosfwd": "cpp",
 		"iostream": "cpp",
 		"istream": "cpp",
 		"limits": "cpp",
 		"new": "cpp",
+		"numbers": "cpp",
 		"ostream": "cpp",
 		"sstream": "cpp",
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
-		"typeinfo": "cpp",
-		"ctime": "cpp",
-		"iomanip": "cpp"
+		"typeinfo": "cpp"
 	}
 }
