--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,6 +46,9 @@
 		"typeinfo": "cpp",
 		"map": "cpp",
 		"ctime": "cpp",
-		"iomanip": "cpp"
+		"iomanip": "cpp",
+		"compare": "cpp",
+		"concepts": "cpp",
+		"numbers": "cpp"
 	}
 }
