--- a/ex02/.vscode/settings.json
+++ b/ex02/.vscode/settings.json
@@ -7,6 +7,8 @@
 		"cctype": "cpp",
 		"clocale": "cpp",
 		"cmath": "cpp",
+		"compare": "cpp",
+		"concepts": "cpp",
 		"cstdarg": "cpp",
 		"cstddef": "cpp",
 		"cstdint": "cpp",
@@ -15,7 +17,8 @@
 		"cwchar": "cpp",
 		"cwctype": "cpp",
 		"deque": "cpp",
-		"map": "cpp",
+		"list": "cpp",
+		"string": "cpp",
 		"unordered_map": "cpp",
 		"vector": "cpp",
 		"exception": "cpp",
@@ -25,27 +28,23 @@
 		"memory": "cpp",
 		"memory_resource": "cpp",
 		"numeric": "cpp",
-		"optional": "cpp",
 		"random": "cpp",
-		"string": "cpp",
 		"string_view": "cpp",
 		"system_error": "cpp",
 		"tuple": "cpp",
 		"type_traits": "cpp",
 		"utility": "cpp",
-		"fstream": "cpp",
 		"initializer_list": "cpp",
 		"iosfwd": "cpp",
 		"iostream": "cpp",
 		"istream": "cpp",
 		"limits": "cpp",
 		"new": "cpp",
+		"numbers": "cpp",
 		"ostream": "cpp",
 		"sstream": "cpp",
 		"stdexcept": "cpp",
 		"streambuf": "cpp",
-		"typeinfo": "cpp",
-		"ctime": "cpp",
-		"iomanip": "cpp"
+		"typeinfo": "cpp"
 	}
 }
