--- a/ex02/Makefile
+++ b/ex02/Makefile
@@ -7,7 +7,7 @@ OBJS		= $(SRCS:%.cpp=%.o)
 
 CXX			= c++
 
-CXXFLAGS	= -Wall -Wextra -Werror -std=c++98
+CXXFLAGS	= -std=c++98
 
 all		: $(NAME)
 
@@ -21,3 +21,17 @@ fclean	: clean
 	rm -f $(NAME)
 
 re : fclean all
+
+
+# =================== test ===================
+long	:
+		./PmergeMe `shuf -i 1-100000 -n 3000 | tr "\n" " "`
+
+test1	:
+		./PmergeMe `shuf -i 1-10 -n 3000 | tr "\n" " "`
+
+test2	:
+		./PmergeMe `shuf -i 1-60 -n 3000 | tr "\n" " "`
+
+error1	:
+	./PmergeMe 0 8 10 -10
